Fix spacing

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -224,6 +224,10 @@ section {
 }
 
 section {
+	margin-top: 5.5rem;
+}
+
+subsection {
 	margin-top: 3.5rem;
 }
 
